Bug 1725470 - p1: pass proxy thread to the base class. r=bryce

EMEMediaDataDecoderProxy doesn't override all inherited methods. Without
providing the same proxy thread, it's possible to break to the thread model.

Differential Revision: https://phabricator.services.mozilla.com/D122627